# hackhour-clock-qt

./: CMakeLists.txt  icons.h  main.cpp  window.cpp  window.h
lib/: qfonticon.cpp  qfonticon.h
src/: icons.h  window.cpp  window.h
src/config/: config.cpp  config.h
